# rr-stack

./: .gitignore  .prettierignore  .prettierrc.js  Cargo.toml  Makefile  package.json  pnpm-lock.yaml  turbo.json
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: .eslintrc.js  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.js  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/lambda/: Cargo.toml  package.json
apps/lambda/src/: main.rs
apps/web/: index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: main.tsx
core/: Cargo.toml
core/src/: lib.rs
