[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.8.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "ansi"] }
rr_core = { path = "../../core" }
axum = "0.6.16"
serde = "1.0.160"
serde_json = "1.0.96"
lambda-web = { version = "0.2.1", features = ["hyper"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
